--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: ..
       dockerfile: .devcontainer/Dockerfile
     volumes:
-      - ~/.ssh/id_rsa:/opt/hokei/.ssh/id_rsa
-      - ..:/opt/hokei/code
-      - ~/etc/localtime:/opt/hokei/etc/localtime
-      - ~/etc/timezone:/opt/hokei/etc/timezone
+      - ~/.ssh/id_rsa:/opt/motiong/.ssh/id_rsa
+      - ..:/opt/motiong/code
+      - ~/etc/localtime:/opt/motiong/etc/localtime
+      - ~/etc/timezone:/opt/motiong/etc/timezone
     command: ["tail -f /dev/null"]
