--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,11 @@
 name = "app"
 version = "0.1.0"
 description = ""
-authors = ["hokei"]
+authors = ["motiong"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.12"
 
 
 
