--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,11 @@ frontend/yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local 
+
+# Node.js 
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.pnpm-store/
