--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,13 @@ fastapi = "^0.104.1"
 uvicorn = "^0.24.0"
 python-multipart = "^0.0.6"
 pydantic = "^2.4.2"
+pydantic-settings = "^2.6.0"
 openai = "^1.3.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-dotenv = "^1.0.0"
 docker = "^6.1.3"
+agentjo = "^0.0.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
